the difference layout issue #167

--- a/styles/components/the-difference.scss
+++ b/styles/components/the-difference.scss
@@ -29,7 +29,6 @@ h5{
 }
 
 #col-1{
-
   padding-left: $medium;
   grid-column: 1/2;
   grid-row: 1/2;
@@ -53,6 +52,17 @@ h5{
       font-weight: bold;
     }
   } 
+  .diff-empty{
+    background-color: $white;
+    height: 0px;
+    @media(min-width: 1415px){
+      height: 150px;
+    }
+    @media(min-width: 2000px){
+      height: 170px;
+    }
+
+  }
 
   .button-container-diff{
     @media(max-width: 1100px) and (min-width: 750px){
